--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.server.js",
     "build": "rimraf dist/ && npm run build:client && npm run build:server",
-    "server": "nodemon server/server.js"
-
+    "server": "nodemon server/server.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.5",
+    "react-hot-loader": "^4.3.3",
     "rimraf": "^2.6.2",
     "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "express": "^4.16.3",
