--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build:server": "webpack --config build/webpack.config.server.js",
     "build": "rimraf dist/ && npm run build:client && npm run build:server",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development nodemon server/server.js"
+    "dev:server": "cross-env NODE_ENV=development nodemon server/server.js",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx client/",
+    "lint": "eslint --ext .js --ext .jsx client/",
+    "precommit": "npm run lint-fix && npm run lint"
   },
   "repository": {
     "type": "git",
@@ -22,13 +25,25 @@
   "homepage": "https://github.com/minorbread/react-porject#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-standard": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
+    "husky": "^0.14.3",
     "memory-fs": "^0.4.1",
     "nodemon": "^1.17.5",
     "react-hot-loader": "^4.3.3",
