--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build:server": "webpack --config build/webpack.config.server.js",
     "build": "rimraf dist/ && npm run build:client && npm run build:server",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development nodemon server/server.js",
+    "dev:server": "nodemon server/server.js",
     "lint-fix": "eslint --fix --ext .js --ext .jsx client/",
     "lint": "eslint --ext .js --ext .jsx client/",
-    "precommit": "npm run lint-fix && npm run lint"
+    "precommit": "npm run lint-fix && npm run lint",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\""
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "concurrently": "^3.6.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
@@ -48,9 +50,11 @@
     "nodemon": "^1.17.5",
     "react-hot-loader": "^4.3.3",
     "rimraf": "^2.6.2",
+    "serve-favicon": "^2.5.0",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
