--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
   }
 }
