--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
   "presets": [
     ["es2015",{"loose":true}],
-    "react"
+    "react",
+    "stage-1"
   ],
   "plugins": [
+    "transform-decorators-legacy",
     "react-hot-loader/babel"
   ]
 }
