--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "concurrently": "^3.6.0",
     "cross-env": "^5.2.0",
     "eslint": "^4.19.1",
@@ -59,6 +61,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
