--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build:client": "webpack --config build/webpack.config.client.js",
     "build:server": "webpack --config build/webpack.config.server.js",
     "build": "rimraf dist/ && npm run build:client && npm run build:server",
+    "start": "cross-env NODE_ENV=production node server/server.js",
     "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "lint-fix": "eslint --fix --ext .js --ext .jsx client/",
     "lint": "eslint --ext .js --ext .jsx client/",
-    "precommit": "npm run lint-fix && npm run lint",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\""
+    "precommit": "npm run lint-fix && npm run lint"
   },
   "repository": {
     "type": "git",
